--- a/content/course/stt212.md
+++ b/content/course/stt212.md
@@ -1,10 +1,6 @@
 ---
 title: Applied Statistics I for Biological and Physical Sciences (STT212)
-summary: """
-Project Highlight: Compiled a report on given data in a group of three using R for calculations and graphics.
-
-Content: Introductory level, algebra-based, frequentist statistics course including presenting data with appropriate numerical and graphical summaries, calculating confidence intervals, and conducting hypothesis tests.
-"""
+summary: "Project Highlight: Compiled a report on given data in a group of three using R for calculations and graphics.</br></br>Content: Introductory level, algebra-based, frequentist statistics course including presenting data with appropriate numerical and graphical summaries, calculating confidence intervals, and conducting hypothesis tests."
 date: "2018-08-01T00:00:00Z"
 tags:
  - stats
