--- a/content/course/stt212.md
+++ b/content/course/stt212.md
@@ -1,9 +1,9 @@
 ---
 title: Applied Statistics I for Biological and Physical Sciences (STT212)
-summary: "Project Highlight: Compiled a report on given data in a group of three using R for calculations and graphics.</br></br>Content: Introductory level, algebra-based, frequentist statistics course including presenting data with appropriate numerical and graphical summaries, calculating confidence intervals, and conducting hypothesis tests."
+summary: "<strong>Project Highlight</strong>: Compiled a report on given data in a group of three using R for calculations and graphics.</br><strong>Content</strong>: Introductory algebra-based, frequentist statistics course covering data presentation with appropriate numerical and graphical summaries, confidence interval calculation, and hypothesis testing."
 date: "2018-08-01T00:00:00Z"
 tags:
- - stats
+ - Stats
  
 # Optional external URL for project (replaces project detail page).
 external_link: ""
