fix course name mistake

--- a/content/course/csc171.md
+++ b/content/course/csc171.md
@@ -1,5 +1,5 @@
 ---
-title: Applied Statistics I for Biological and Physical Sciences (STT212)
+title: Introduction to Computer Science (CSC171)
 summary: "<strong>Project Highlight</strong>: Completed several open-ended design projects implementing gameplay, logic control, and user interface for TTY and graphics-based games.</br><strong>Content</strong>: Project-based introduction to computer science in Java with emphasis on algorithmic thinking, computational problem solving, and concepts and methods central to a continuing computer science curriculum. Topics included flow control, object oriented program design including principles of polymorphism and inheritance, file I/O, collections, and basic swing graphics."
 date: "2020-01-01T00:00:00Z"
 tags:
