add fall 2020 classes

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,9 @@
 * Update README
 * Add other projects
 * Add LinkedIn
+* stat203
 
 COMMON TASKS
 * Update Resume: Place in static/files and change in config/_default/menus.toml
 * Update Bio: content/authors/admin/_index.md
+* Add courses: make .md in content/course
