--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,4 @@ COMMON TASKS
 * Update Resume: Place in static/files and change in config/_default/menus.toml
 * Update Bio: content/authors/admin/_index.md
 * Add courses: make .md in content/course
+* Add experience: content/home/experience.md
