--- a/content/course/csc172.md
+++ b/content/course/csc172.md
@@ -1,6 +1,6 @@
 ---
 title: 	Data Structures & Algorithms (CSC172)
-summary: "<strong>Project Highlight</strong>: Implemented infix calculation with the Shunting-Yard Algorithm, Huffman compression, and mapping tasks such as Dijkstra's shortest path algorithm, Prim's algorithm for minimum spanning trees, and map graphics using my own implementation for all underlying data structures.</br><strong>Content</strong>: Exploration of common algorithms and their underlying abstract data types and their implementation in Java and analysis of program run times, techniques of program design, analysis, and proof of correctness."
+summary: "<strong>Project Highlight</strong>: Implemented infix calculation with the Shunting-Yard Algorithm, Huffman compression, and mapping tasks such as Dijkstra's shortest path algorithm, Prim's algorithm for minimum spanning trees, and map graphics using my own implementation for all underlying data structures.</br><strong>Content</strong>: Exploration of common algorithms and their underlying abstract data types and implementation in Java. Additional discussion of analysis of program run times and techniques of program design, analysis, and proof of correctness."
 date: "2021-01-01T00:00:00Z"
 tags:
  - CompSci
