Add fall 2021 courses

--- a/content/course/csc240.md
+++ b/content/course/csc240.md
@@ -1,6 +1,6 @@
 ---
 title: 	Introduction to Data Mining (CSC240)
-summary: "Description will be included upon completion of the course in December 2021."
+summary: "<strong>Project Highlight</strong>: Presented on the theory, application, and literature review on centroid based clustering methods with the objective of proposing an alternative that retains the intuitiveness and speed of K-Means clustering while addressing some of its shortcomings.<br><strong>Content</strong>: Introduction to concepts and techniques of data mining including pre-processing, frequent pattern detection, association and correlation, basic NLP, classification and clustering methods, and outlier and missing data handling in Python."
 date: "2021-08-25T00:00:00Z"
 tags:
  - DataSci
